# zstr

./: .gitignore  .travis.Dockerfile.in  .travis.yml  CMakeLists.txt  README.org
examples/: Makefile  test-strict_fstream.cpp  zc.cpp  zpipe.cpp  ztxtpipe.cpp
src/: strict_fstream.hpp  zstr.hpp  zstr_make_unique_polyfill.h
